# EmberFusionAI

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  build.sh  configure.ac  libefusconsensus.pc.in
.tx/: config
build-aux/m4/: bitcoin_qt.m4
ci/dash/: build-docker.sh  build_depends.sh  build_src.sh  push-docker.sh  test_integrationtests.sh  test_unittests.sh
ci/test/: 00_setup_env.sh  00_setup_env_i686.sh  00_setup_env_i686_ubsan.sh  00_setup_env_native_cxx20.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_tsan.sh  (+1 more)
contrib/: README.md  efus-cli.bash-completion  efus-qt.pro  efus-tx.bash-completion  efusd.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
depends/: README.md  description.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-cross.md  build-generic.md  build-netbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  efus-conf.md  files.md  fuzzing.md  gitian-building.md  init.md  instantsend.md  masternode-budget.md  productivity.md  reduce-memory.md  reduce-traffic.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  zmq.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  bip39_english.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoind.cpp  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.h  dummywallet.cpp  efus-cli-res.rc  efus-tx-res.rc  efus-wallet-res.rc  efusd-res.rc  hash.h  init.cpp  init.h  key_io.cpp  logging.cpp  logging.h  net.cpp  net.h  net_processing.cpp  net_processing.h  pow.cpp  protocol.cpp  protocol.h  spork.h  stacktraces.cpp  tinyformat.h  validation.cpp  (+2 more)
src/efusbls/rust-bindings/bls-signatures/: Cargo.toml
src/efusbls/rust-bindings/bls-signatures/src/: elements.rs  lib.rs  private_key.rs  schemes.rs  utils.rs
src/efusbls/rust-bindings/bls-signatures/src/bip32/: chain_code.rs  private_key.rs  public_key.rs
src/efusbls/src/: CMakeLists.txt
test/: README.md
(+351 files in other folders)
